; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm8668/files-3.18/arch/mips/pci/extr_pci-adm8668.c_pci_read_config.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm8668/files-3.18/arch/mips/pci/extr_pci-adm8668.c_pci_read_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { i32 }

@pci_lock = common dso_local global i32 0, align 4
@PCIBIOS_SUCCESSFUL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_bus*, i32, i32, i32, i32*)* @pci_read_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_read_config(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca %struct.pci_bus*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.pci_bus* %0, %struct.pci_bus** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %13 = load i64, i64* %11, align 8
  %14 = call i32 @spin_lock_irqsave(i32* @pci_lock, i64 %13)
  %15 = load %struct.pci_bus*, %struct.pci_bus** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @mkaddr(%struct.pci_bus* %15, i32 %16, i32 %17)
  %19 = call i32 @write_cfgaddr(i32 %18)
  %20 = call i32 (...) @read_cfgdata()
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %9, align 4
  switch i32 %21, label %49 [
    i32 1, label %22
    i32 2, label %39
  ]

22:                                               ; preds = %5
  %23 = load i32, i32* %8, align 4
  %24 = and i32 %23, 1
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %22
  %27 = load i32, i32* %12, align 4
  %28 = ashr i32 %27, 8
  store i32 %28, i32* %12, align 4
  br label %29

29:                                               ; preds = %26, %22
  %30 = load i32, i32* %8, align 4
  %31 = and i32 %30, 2
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %29
  %34 = load i32, i32* %12, align 4
  %35 = ashr i32 %34, 16
  store i32 %35, i32* %12, align 4
  br label %36

36:                                               ; preds = %33, %29
  %37 = load i32, i32* %12, align 4
  %38 = and i32 %37, 255
  store i32 %38, i32* %12, align 4
  br label %49

39:                                               ; preds = %5
  %40 = load i32, i32* %8, align 4
  %41 = and i32 %40, 2
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %46

43:                                               ; preds = %39
  %44 = load i32, i32* %12, align 4
  %45 = ashr i32 %44, 16
  store i32 %45, i32* %12, align 4
  br label %46

46:                                               ; preds = %43, %39
  %47 = load i32, i32* %12, align 4
  %48 = and i32 %47, 65535
  store i32 %48, i32* %12, align 4
  br label %49

49:                                               ; preds = %5, %46, %36
  %50 = load i32, i32* %12, align 4
  %51 = load i32*, i32** %10, align 8
  store i32 %50, i32* %51, align 4
  %52 = load i64, i64* %11, align 8
  %53 = call i32 @spin_unlock_irqrestore(i32* @pci_lock, i64 %52)
  %54 = load i32, i32* @PCIBIOS_SUCCESSFUL, align 4
  ret i32 %54
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @write_cfgaddr(i32) #1

declare dso_local i32 @mkaddr(%struct.pci_bus*, i32, i32) #1

declare dso_local i32 @read_cfgdata(...) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
